small fixes
font size smaller on mobile, faq answer font smaller than question, hack
logo bigger on mobile, added mobile-small mixin to fix overlapping hack
logo with signs on older phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,8 +249,11 @@ h2 {
   padding-top: 60px; }
   @media screen and (max-width: 599px) {
     .logo {
-      width: 22%;
+      width: 30%;
       padding-top: 4vh; } }
+  @media screen and (max-width: 350px) {
+    .logo {
+      padding-bottom: 6vh; } }
 
 .heading {
   width: 80vw;
@@ -482,6 +485,9 @@ mark.red {
       .expanded-bubble .content {
         width: 700px;
         left: calc(40vw - 350px); } }
+    @media screen and (max-width: 599px) {
+      .expanded-bubble .content {
+        font-size: 1.25rem; } }
     .expanded-bubble .content .faq {
       cursor: pointer; }
       .expanded-bubble .content .faq .question::before {
@@ -493,7 +499,11 @@ mark.red {
         font-size: 1rem; }
       .expanded-bubble .content .faq.expanded .answer {
         display: block;
-        margin-left: 20px; }
+        margin-left: 20px;
+        font-size: 1.25rem; }
+        @media screen and (max-width: 599px) {
+          .expanded-bubble .content .faq.expanded .answer {
+            font-size: 1rem; } }
   .expanded-bubble#red-expanded-bubble {
     border: #fac7b9 0.5px solid;
     box-shadow: inset 0 0 0 0.5px #fac7b9, inset 0 0 0 1.25px #f6a594, inset 0 0 0 2px #f38b7a, inset 0 0 0 2.75px #f07062, inset 0 0 0 3.5px #ec4747, inset 0 0 0 2.5px rgba(92, 18, 23, 0.3), inset 0 0 0 4.25px rgba(92, 18, 23, 0.25), inset 0 0 0 5px rgba(92, 18, 23, 0.2), 0 0 0 0.5px #fac7b9, 0 0 0 1.25px #f6a594, 0 0 0 2px #f38b7a, 0 0 0 2.75px #f07062, 0 0 0 3.5px #ec4747, 0 0 0 2.5px rgba(92, 18, 23, 0.3), 0 0 0 4.25px rgba(92, 18, 23, 0.25), 0 0 0 5px rgba(92, 18, 23, 0.2); }
