--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,6 @@
+@mixin mobile-small {
+  @media screen and (max-width: 350px) { @content; }
+}
 @mixin mobile {
   @media screen and (max-width: 599px) { @content; }
 }
